--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Ganti"/>
+
+        <ListView
+            android:id="@+id/listViewNama"
+            android:layout_width="match_parent"
+            android:layout_height="298dp"
+            android:layout_weight="1.02"/>
+
+
     </LinearLayout>
 
 </FrameLayout>
